--- a/Copernicus/packages.config
+++ b/Copernicus/packages.config
@@ -1,54 +1,60 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
-  <package id="Batman.Core" version="1.0.0043" targetFramework="net45" />
-  <package id="Batman.Core.Bootstrapper.SimpleInjector" version="1.0.0043" targetFramework="net45" />
-  <package id="Batman.Core.Communication.RazorFormatter" version="1.0.0043" targetFramework="net45" />
-  <package id="Batman.Core.Communication.SMTP" version="1.0.0043" targetFramework="net45" />
-  <package id="Batman.Core.FileSystem.Default" version="1.0.0043" targetFramework="net45" />
-  <package id="Batman.Core.Logging.NLog" version="1.0.0043" targetFramework="net45" />
-  <package id="Batman.Core.Profiling.MiniProfiler" version="1.0.0043" targetFramework="net45" />
-  <package id="Batman.MVC" version="1.0.0043" targetFramework="net45" />
-  <package id="Batman.MVC.Assets.Less" version="1.0.0043" targetFramework="net45" />
-  <package id="Batman.MVC.Assets.Yui" version="1.0.0043" targetFramework="net45" />
-  <package id="Batman.MVC.Default" version="1.0.0043" targetFramework="net45" />
-  <package id="Batman.MVC.Serialization.ServiceStack" version="1.0.0043" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary-Compression" version="3.4.0080" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary-DataTypes" version="3.4.0080" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary-Encryption" version="3.4.0080" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary-FileFormats" version="3.4.0080" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary-IO" version="3.4.0080" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary-Math" version="3.4.0080" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary-Media" version="3.4.0080" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary-Random" version="3.4.0080" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary-Reflection" version="3.4.0080" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary-Web" version="3.4.0080" targetFramework="net45" />
-  <package id="dotless" version="1.3.1.0" targetFramework="net45" />
+  <package id="CraigsUtilityLibrary" version="4.0.0062-beta" targetFramework="net45" />
+  <package id="CUL.MiniProfiler" version="4.0.0062-beta" targetFramework="net45" />
+  <package id="CUL.NLog" version="4.0.0062-beta" targetFramework="net45" />
+  <package id="CUL.ServiceStack" version="4.0.0062-beta" targetFramework="net45" />
+  <package id="dotless" version="1.4.0.0" targetFramework="net45" />
   <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
   <package id="Elmah.MVC" version="2.1.1" targetFramework="net45" />
-  <package id="Glimpse" version="1.8.0" targetFramework="net45" />
+  <package id="Glimpse" version="1.8.3" targetFramework="net45" />
   <package id="Glimpse.Ado" version="1.7.0" targetFramework="net45" />
-  <package id="Glimpse.AspNet" version="1.6.0" targetFramework="net45" />
-  <package id="Glimpse.Batman" version="1.0.0043" targetFramework="net45" />
+  <package id="Glimpse.AspNet" version="1.8.0" targetFramework="net45" />
+  <package id="Glimpse.CUL" version="4.0.0062-beta" targetFramework="net45" />
   <package id="Glimpse.Elmah" version="1.1.1" targetFramework="net45" />
-  <package id="Glimpse.MiniProfiler" version="1.2.3" targetFramework="net45" />
-  <package id="Glimpse.Mvc4" version="1.5.1" targetFramework="net45" />
+  <package id="Glimpse.MiniProfiler" version="1.2.4" targetFramework="net45" />
+  <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net45" />
   <package id="Glimpse.NLog" version="1.3.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
+  <package id="glimpse-knockout" version="0.1.5" targetFramework="net45" />
+  <package id="Ironman.Core" version="1.0.0062-beta" targetFramework="net45" />
+  <package id="Ironman.Core.Assets.Less" version="1.0.0062-beta" targetFramework="net45" />
+  <package id="Ironman.Core.Assets.Yui" version="1.0.0062-beta" targetFramework="net45" />
+  <package id="knockoutjs" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.0.0-beta1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.0.0-beta1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.0.0-alpha1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0-alpha1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="3.0.0-alpha1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.0-alpha1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Facebook" version="3.0.0-alpha1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Google" version="3.0.0-alpha1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.0.0-alpha1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.0-alpha1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Twitter" version="3.0.0-alpha1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MiniProfiler" version="2.1.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
   <package id="NLog" version="2.1.0" targetFramework="net45" />
-  <package id="NLog.Config" version="2.1.0" targetFramework="net45" />
-  <package id="NLog.Schema" version="2.1.0" targetFramework="net45" />
-  <package id="RazorEngine" version="3.4.0" targetFramework="net45" />
-  <package id="ServiceStack.Text" version="3.9.70" targetFramework="net45" />
-  <package id="SimpleInjector" version="2.3.6" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Roslyn" version="1.2.20906.2" targetFramework="net45" />
+  <package id="Roslyn.Compilers.Common" version="1.2.20906.2" targetFramework="net45" />
+  <package id="Roslyn.Compilers.CSharp" version="1.2.20906.2" targetFramework="net45" />
+  <package id="Roslyn.Compilers.VisualBasic" version="1.2.20906.2" targetFramework="net45" />
+  <package id="Roslyn.Services.Common" version="1.2.20906.2" targetFramework="net45" />
+  <package id="Roslyn.Services.CSharp" version="1.2.20906.2" targetFramework="net45" />
+  <package id="Roslyn.Services.VisualBasic" version="1.2.20906.2" targetFramework="net45" />
+  <package id="ServiceStack" version="4.0.11" targetFramework="net45" />
+  <package id="ServiceStack.Client" version="4.0.11" targetFramework="net45" />
+  <package id="ServiceStack.Common" version="4.0.11" targetFramework="net45" />
+  <package id="ServiceStack.Interfaces" version="4.0.11" targetFramework="net45" />
+  <package id="ServiceStack.Text" version="4.0.11" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.4" targetFramework="net45" />
-  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net45" />
   <package id="YUICompressor.NET" version="2.3.0.0" targetFramework="net45" />
 </packages>
