--- a/Copernicus.Core/packages.config
+++ b/Copernicus.Core/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary" version="4.0.0119-beta" targetFramework="net45" />
-  <package id="Ironman.Core" version="1.0.0119-beta" targetFramework="net45" />
+  <package id="CraigsUtilityLibrary" version="4.0.123-beta" targetFramework="net45" />
+  <package id="Ironman.Core" version="1.0.123-beta" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
