Debating on plugin system
Pushing the plugin system down into the model/core since that's what the
entire system is built on top of.
Using BlogEngine.net as my example for NuGet integration into the app.

--- a/Copernicus.Core/Copernicus.Core.csproj
+++ b/Copernicus.Core/Copernicus.Core.csproj
@@ -226,9 +226,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Builder\BaseClasses\AppBuilderBaseClass.cs" />
-    <Compile Include="Builder\Interfaces\IAppBuilder.cs" />
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Plugins\BaseClasses\PluginBaseClass.cs" />
+    <Compile Include="Plugins\Enums\PluginType.cs" />
+    <Compile Include="Plugins\Interfaces\IPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\WindowsPrincipalHandler.cs" />
     <Compile Include="Startup.cs" />
