Worked a bit more on the models for plugins
Basic data models are done for plugins. Also added permissions. I'm
looking to add NuGet support for the plugins next along with an auto
update feature. Once I have that, the basic core is done.

--- a/Copernicus.Models/Copernicus.Models.csproj
+++ b/Copernicus.Models/Copernicus.Models.csproj
@@ -191,11 +191,14 @@
   <ItemGroup>
     <Compile Include="Authentication\ExternalLogin.cs" />
     <Compile Include="Authentication\Mappings\ExternalLoginMapping.cs" />
+    <Compile Include="Authentication\Mappings\PermissionMapping.cs" />
     <Compile Include="Authentication\Mappings\UserClaimMapping.cs" />
     <Compile Include="Authentication\Mappings\UserMapping.cs" />
+    <Compile Include="Authentication\PermissionType.cs" />
     <Compile Include="Authentication\Stores\UserStore.cs" />
     <Compile Include="Authentication\User.cs" />
     <Compile Include="Authentication\UserClaim.cs" />
+    <Compile Include="Authentication\Permission.cs" />
     <Compile Include="BaseClasses\ModelBase.cs" />
     <Compile Include="BaseClasses\ModelMappingBase.cs" />
     <Compile Include="Configuration\DatabaseConfig.cs" />
