--- a/Copernicus.Core/packages.config
+++ b/Copernicus.Core/packages.config
@@ -14,7 +14,9 @@
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Xdt" version="1.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net45" />
+  <package id="NuGet.Core" version="2.8.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Roslyn" version="1.2.20906.2" targetFramework="net45" />
   <package id="Roslyn.Compilers.Common" version="1.2.20906.2" targetFramework="net45" />
