Worked a bit on plugin system
Started the plugin manager and added ID field for the plugin model.

--- a/Copernicus.Core/Copernicus.Core.csproj
+++ b/Copernicus.Core/Copernicus.Core.csproj
@@ -237,6 +237,7 @@
     <Compile Include="Plugins\BaseClasses\PluginBaseClass.cs" />
     <Compile Include="Plugins\Enums\PluginType.cs" />
     <Compile Include="Plugins\Interfaces\IPlugin.cs" />
+    <Compile Include="Plugins\PluginManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\WindowsPrincipalHandler.cs" />
     <Compile Include="Startup.cs" />
