Finished initial coding of plugin system
Need to set up something for testing and clean out the bugs. But it's
basically done.

--- a/Copernicus.Core.Tests/app.config
+++ b/Copernicus.Core.Tests/app.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <connectionStrings>
+    <add name="Default" connectionString="Data Source=localhost;Initial Catalog=Copernicus;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <appSettings>
+    <add key="PluginSource" value="C:\\Plugins\\" />
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
