Fixed issues with loading/updating plugins
Forgot that you can't replace a DLL while it's being used. Changes that
I made should get around that issue. Also started on actual individual
plugin code.

--- a/Copernicus.Core/Copernicus.Core.csproj
+++ b/Copernicus.Core/Copernicus.Core.csproj
@@ -234,6 +234,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Plugins\BaseClasses\PluginBase.cs" />
+    <Compile Include="Plugins\BaseClasses\ThemePluginBase.cs" />
+    <Compile Include="Plugins\Interfaces\IPlugin.cs" />
     <Compile Include="Plugins\Module\PluginModule.cs" />
     <Compile Include="Plugins\PluginManager.cs" />
     <Compile Include="Plugins\Tasks\PluginTask.cs" />
