--- a/Copernicus.Models/Copernicus.Models.csproj
+++ b/Copernicus.Models/Copernicus.Models.csproj
@@ -202,6 +202,9 @@
     <Compile Include="BaseClasses\ModelBase.cs" />
     <Compile Include="BaseClasses\ModelMappingBase.cs" />
     <Compile Include="Configuration\DatabaseConfig.cs" />
+    <Compile Include="Data\Model.cs" />
+    <Compile Include="Data\Property.cs" />
+    <Compile Include="Data\ViewModel.cs" />
     <Compile Include="General\LookUp.cs" />
     <Compile Include="General\LookUpType.cs" />
     <Compile Include="General\Mappings\LookUpMapping.cs" />
