--- a/Copernicus.Models.Tests/App.config
+++ b/Copernicus.Models.Tests/App.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <connectionStrings>
-    <add name="Default" connectionString="Data Source=localhost;Initial Catalog=CopernicusTest;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <connectionStrings>
+        <add name="Default" connectionString="Data Source=localhost;Initial Catalog=CopernicusTest;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    </connectionStrings>
+    <appSettings>
+        <add key="Copernicus:PluginSource" value="C:\\Plugins\\" />
+        <add key="Copernicus:EncryptionPassword" value="TestPassword" />
+        <add key="Copernicus:EncryptionSalt" value="TestSalt" />
+        <add key="Copernicus:EncryptionInitialVector" value="TestInitialVecto" />
+    </appSettings>
 </configuration>
