--- a/Copernicus.Models.Tests/Copernicus.Models.Tests.csproj
+++ b/Copernicus.Models.Tests/Copernicus.Models.Tests.csproj
@@ -109,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Authentication\Stores\UserStore.cs" />
+    <Compile Include="Data\Source.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
