Did some basic updates
Got rid of the model generator code. Just doesn't flow well at this
point in time.
Updated the plugin system to not use the ORM. Thus it can now initialize
prior to the ORM starting and allow plugins to tie into that system.

--- a/Copernicus.Models/Copernicus.Models.csproj
+++ b/Copernicus.Models/Copernicus.Models.csproj
@@ -202,20 +202,15 @@
     <Compile Include="BaseClasses\ModelBase.cs" />
     <Compile Include="BaseClasses\ModelMappingBase.cs" />
     <Compile Include="Configuration\DatabaseConfig.cs" />
-    <Compile Include="Data\Model.cs" />
-    <Compile Include="Data\Property.cs" />
-    <Compile Include="Data\Source.cs" />
-    <Compile Include="Data\ViewModel.cs" />
     <Compile Include="General\LookUp.cs" />
     <Compile Include="General\LookUpType.cs" />
     <Compile Include="General\Mappings\LookUpMapping.cs" />
     <Compile Include="General\Mappings\LookUpTypeMapping.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Interfaces\IModel.cs" />
-    <Compile Include="Plugins\Mappings\PluginFileMapping.cs" />
-    <Compile Include="Plugins\Mappings\PluginMapping.cs" />
     <Compile Include="Plugins\Plugin.cs" />
     <Compile Include="Plugins\PluginFile.cs" />
+    <Compile Include="Plugins\PluginList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
