--- a/Copernicus.Core/Copernicus.Core.csproj
+++ b/Copernicus.Core/Copernicus.Core.csproj
@@ -234,8 +234,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="ModelBuilder\Manager.cs" />
-    <Compile Include="ModelBuilder\Module\ModelBuilderModule.cs" />
     <Compile Include="Plugins\BaseClasses\ExtensionPluginBase.cs" />
     <Compile Include="Plugins\BaseClasses\PluginBase.cs" />
     <Compile Include="Plugins\BaseClasses\RendererPluginBase.cs" />
@@ -244,7 +242,6 @@
     <Compile Include="Plugins\Interfaces\IPlugin.cs" />
     <Compile Include="Plugins\Module\PluginModule.cs" />
     <Compile Include="Plugins\PluginManager.cs" />
-    <Compile Include="Plugins\Tasks\PluginTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\WindowsPrincipalHandler.cs" />
     <Compile Include="Startup.cs" />
@@ -264,9 +261,7 @@
       <Name>Copernicus.ViewModels</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModelBuilder\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
