--- a/Copernicus.Models.CRM/Copernicus.Models.CRM.csproj
+++ b/Copernicus.Models.CRM/Copernicus.Models.CRM.csproj
@@ -107,6 +107,18 @@
     <Compile Include="Country.cs" />
     <Compile Include="Education.cs" />
     <Compile Include="ImportantDate.cs" />
+    <Compile Include="Mappings\AddressMapping.cs" />
+    <Compile Include="Mappings\CompanyMapping.cs" />
+    <Compile Include="Mappings\ContactInfoMapping.cs" />
+    <Compile Include="Mappings\CountryMapping.cs" />
+    <Compile Include="Mappings\EducationMapping.cs" />
+    <Compile Include="Mappings\ImportantDatesMapping.cs" />
+    <Compile Include="Mappings\PersonMapping.cs" />
+    <Compile Include="Mappings\RelationshipMapping.cs" />
+    <Compile Include="Mappings\SchoolMapping.cs" />
+    <Compile Include="Mappings\SkillMapping.cs" />
+    <Compile Include="Mappings\StateMapping.cs" />
+    <Compile Include="Mappings\WorkExperienceMapping.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Relationship.cs" />
@@ -116,6 +128,7 @@
     <Compile Include="WorkExperience.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -128,9 +141,7 @@
       <Name>Copernicus.Models</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Mappings\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
