--- a/Copernicus.Models.Tests/App.config
+++ b/Copernicus.Models.Tests/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <connectionStrings>
         <add name="Default" connectionString="Data Source=localhost;Initial Catalog=CopernicusTest;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
@@ -9,4 +9,12 @@
         <add key="Copernicus:EncryptionSalt" value="TestSalt" />
         <add key="Copernicus:EncryptionInitialVector" value="TestInitialVecto" />
     </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Web.XmlTransform" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.0.0" newVersion="1.2.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
