--- a/Copernicus/Web.config
+++ b/Copernicus/Web.config
@@ -29,7 +29,7 @@
         <add key="elmah.mvc.allowedRoles" value="*" />
         <add key="elmah.mvc.allowedUsers" value="*" />
         <add key="elmah.mvc.route" value="elmah" />
-        <add key="Copernicus:PluginSource" value="C:\\Plugins\\" />
+        <add key="Copernicus:PluginSource" value="http://localhost:8797/api/v2" />
     </appSettings>
 
     <system.web>
