Updated plugin code a bit more.

--- a/Copernicus.Core/Copernicus.Core.csproj
+++ b/Copernicus.Core/Copernicus.Core.csproj
@@ -236,6 +236,7 @@
   <ItemGroup>
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Plugins\BaseClasses\ExtensionPluginBase.cs" />
+    <Compile Include="Plugins\BaseClasses\ModelPlugin.cs" />
     <Compile Include="Plugins\BaseClasses\PluginBase.cs" />
     <Compile Include="Plugins\BaseClasses\RendererPluginBase.cs" />
     <Compile Include="Plugins\BaseClasses\ThemePluginBase.cs" />
