Updated a couple packages to fix some issues.
Also updated the routing code a bit.

--- a/Copernicus/Web.config
+++ b/Copernicus/Web.config
@@ -157,7 +157,7 @@
   <elmah>
     <errorLog type="Elmah.XmlFileErrorLog, Elmah" logPath="~/App_Data/Logs" />
     <security allowRemoteAccess="no" />
-    <errorMail from="system@yourdomain.com" to="admin@yourdomain.com" subject="Application Error" async="true" smtpPort="25" smtpServer="smtpserver.yourdomain.com" />
+    <!--<errorMail from="system@yourdomain.com" to="admin@yourdomain.com" subject="Application Error" async="true" smtpPort="25" smtpServer="smtpserver.yourdomain.com" />-->
   </elmah>
 
   <glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
