Finished basics for workflow system.
Still need to clean things up a bit, add more types, etc.

--- a/Copernicus.Core.Tests/Copernicus.Core.Tests.csproj
+++ b/Copernicus.Core.Tests/Copernicus.Core.Tests.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Plugins\PluginManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\WindowsPrincipalHandler.cs" />
+    <Compile Include="Workflow\GenericOperation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -117,6 +118,7 @@
       <Name>Copernicus.Models</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
